# techno_IZ2

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ubuntu.yml
include/: search.h
src/: common.c  main.c  parallel_search.c  sequential_search.c
tests/: 1.txt  2.txt  3.txt  common_tests.cpp  parallel_tests.cpp  sequential_tests.cpp
